# vexor

./: .env-dev  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/script/: boot.sh
.docs/: architecture.md  domain_glossary.md  file_map.txt
vexor/: __init__.py  _helpers.py  errors.py
vexor/agents/: crew_agent.py  react_agent.py  search_tool.py
vexor/agents/prompts/: crew_agents.yaml  crew_tasks.yaml  react_template.yaml
vexor/config/: __init__.py  collection.py  connection.py  embedding.py  filtering.py  ingestion.py  llm.py  observability.py  request.py  search.py  segmentation.py  settings.py
vexor/core/: cluster_info.py  collection_manager.py  session.py  shard_manager.py
vexor/embedding/: fastembed_adapter.py  loader.py  protocol.py  sbert_adapter.py
vexor/examples/: env_config.py  ingest_tabular.py  search_dense.py
vexor/ingestion/: column_resolver.py  pipeline.py  readers.py  text_builder.py
vexor/llm/: client_factory.py  tracing_factory.py
vexor/observability/: log_setup.py
vexor/search/: digital_twin.py  engine.py  hybrid.py  recommender.py  validators.py
vexor/segmentation/: chunker_factory.py
vexor/storage/: duckdb_connector.py  s3_uploader.py
