[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vexor"
dynamic = ["version"]
description = "Advanced vector similarity search engine built on Qdrant"
readme = "README.md"
authors = [
  { name = "Emrullah YILDIRIM", email="emrullahyildirim@windowslive.com" } ]
maintainers = [
  { name = "Emrullah YILDIRIM", email="emrullahyildirim@windowslive.com" } ]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "fastembed>=0.7.4",
  "loguru>=0.7.3",
  "pandas>=2.2.3",
  "pyarrow>=18.1.0",
  "pydantic>=2.10.4",
  "python-dotenv>=1.0.1",
  "typing_extensions>=4.12.2",
  "uv>=0.5.14",
  "duckdb>=1.3.2",
  "PyMuPDF>=1.26.6",
  "deltalake>=1.1.4",
  "qdrant-client>=1.12.2",
  "chonkie[all]==1.5.2",
  "boto3>=1.42.31",
]

[project.optional-dependencies]
agentops = [
  "agentops>=0.4.16",
]
crewai = [
  "crewai>=1.6.0",
  "crewai-tools>=1.6.0",
]
dev = [
  "bump-my-version>=0.29.0",
  "python-dotenv>=1.0.1",
  "ruff>=0.8.6",
  "starlette>=0.45.2",
  "ipdb>=0.13.13"
]
langchain = [
  "langchain>=1.1.0",
  "langchain-cohere>=0.5.0",
  "langchain-community>=0.4.1",
  "langchain-core>=1.1.0",
  "langchain-experimental>=0.4.0",
  "langchain-google-genai>=3.2.0",
  "langchain-openai>=1.1.0",
  "langchain-text-splitters>=1.0.0",
  "langsmith>=0.4.49",
]

opik = ["opik>=1.9.66"]
langfuse = ["langfuse>=3.11.2"]

sentence_transformers_cpu = [
  "sentence-transformers>=3.3.1",
  "torch>=2.7.0",
]


# sentence_transformers_cpu
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# # sentence_transformers_cpu
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "sentence_transformers_cpu" },
]

[project.urls]
Homepage = "https://github.com/Sangaibisi/vexor"
Repository = "https://github.com/Sangaibisi/vexor"

[tool.hatch.version]
path = "vexor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["vexor"]

[tool.bumpversion]
current_version = "3.0.0-dev1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?:-(?P<release>dev)(?P<dev>\\d+))?"
serialize = [
	"{major}.{minor}.{patch}-{release}{dev}",
	"{major}.{minor}.{patch}"
]
commit = true
tag = true
allow_dirty = true
tag_message = "v{new_version}"
tag_name = "{new_version}"
message = "Bump v{current_version} -> v{new_version}"

[tool.bumpversion.parts.release]
optional_value = "rc"
values = ["dev", "rc"]

[[tool.bumpversion.files]]
filename = "vexor/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
unfixable = []
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E", "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # flake8-debugger
  "T10",
  # flake8-gettext
  "INT",
  # pylint
  "PL",
  # flake8-pytest-style
  "PT",
  # misc lints
  "PIE",
  # flake8-pyi
  "PYI",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # comprehensions
  "C4",
  # pygrep-hooks
  "PGH",
  # Ruff-specific rules
  "RUF",
  # flake8-bandit: exec-builtin
  "S102",
  # numpy-legacy-random
  "NPY002",
  # Perflint
  "PERF",
  # flynt
  "FLY",
  # flake8-logging-format
  "G",
  # flake8-future-annotations
  "FA",
]

ignore = [
  ### Intentionally disabled
  # Use specific rule codes when using `noqa`
  "PGH004",
  # Import level should be at the top
  "PLC0415",
  # Do not use mutable data structures for argument defaults
  "B006",
  # Unnecessary `pass` statement
  "PIE790",
  # Prefer `next(iter(self.model.embed(text)))` over single element slice
  "RUF015",
  # Unnecessary `map` usage (rewrite using a generator expression)
  "C417",
  # Logging statement uses f-string
  "G004",
  # module level import not at top of file
  "E402",
  # do not assign a lambda expression, use a def
  "E731",
  # controversial
  "B007",
  # controversial
  "B008",
  # setattr is used to side-step mypy
  "B009",
  # getattr is used to side-step mypy
  "B010",
  # tests use comparisons but not their returned value
  "B015",
  # Function definition does not bind loop variable
  "B023",
  # Only works with python >=3.10
  "B905",
  # Too many arguments to function call
  "PLR0913",
  # Too many returns
  "PLR0911",
  # Too many branches
  "PLR0912",
  # Too many statements
  "PLR0915",
  # Redefined loop name
  "PLW2901",
  # Global statements are discouraged
  "PLW0603",
  # Use `typing.NamedTuple` instead of `collections.namedtuple`
  "PYI024",
  # while int | float can be shortened to float, the former is more explicit
  "PYI041",
  # incorrect-dict-iterator, flags valid Series.items usage
  "PERF102",
  # try-except-in-loop, becomes useless in Python 3.11
  "PERF203",
  # pytest-parametrize-names-wrong-type
  "PT006",
  # pytest-parametrize-values-wrong-type
  "PT007",
  # pytest-patch-with-lambda
  "PT008",
  # pytest-raises-with-multiple-statements
  "PT012",
  # pytest-assert-in-except
  "PT017",
  # pytest-composite-assertion
  "PT018",
  # pytest-fixture-param-without-value
  "PT019",
  # The following rules may cause conflicts when used with the formatter:
  "ISC001",

  ### TODO: Enable gradually
  # Useless statement
  "B018",
  # Magic number
  "PLR2004",
  # comparison-with-itself
  "PLR0124",
  # collection-literal-concatenation
  "RUF005",
  # pairwise-over-zipped (>=PY310 only)
  "RUF007",
  # mutable-class-default
  "RUF012",
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
 # intentionally turned off
  "bad-mcs-classmethod-argument",
  "broad-except",
  "c-extension-no-member",
  "comparison-with-itself",
  "consider-using-enumerate",
  "import-error",
  "import-outside-toplevel",
  "invalid-name",
  "invalid-unary-operand-type",
  "line-too-long",
  "no-else-continue",
  "no-else-raise",
  "no-else-return",
  "no-member",
  "no-name-in-module",
  "not-an-iterable",
  "overridden-final-method",
  "pointless-statement",
  "redundant-keyword-arg",
  "singleton-comparison",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-boolean-expressions",
  "too-many-branches",
  "too-many-function-args",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "unexpected-keyword-arg",
  "ungrouped-imports",
  "unsubscriptable-object",
  "unsupported-assignment-operation",
  "unsupported-membership-test",
  "unused-import",
  "use-dict-literal",
  "use-implicit-booleaness-not-comparison",
  "use-implicit-booleaness-not-len",
  "wrong-import-order",
  "wrong-import-position",
  "redefined-loop-name",

 # misc
  "abstract-class-instantiated",
  "no-value-for-parameter",
  "undefined-variable",
  "unpacking-non-sequence",
  "used-before-assignment",

 # pylint type "C": convention, for programming standard violation
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "superfluous-parens",
  "too-many-lines",
  "unidiomatic-typecheck",
  "unnecessary-dunder-call",
  "unnecessary-lambda-assignment",

  # pylint type "R": refactor, for bad code smell
  "consider-using-with",
  "cyclic-import",
  "duplicate-code",
  "inconsistent-return-statements",
  "redefined-argument-from-local",
  "too-few-public-methods",

  # pylint type "W": warning, for python specific problems
  "abstract-method",
  "arguments-differ",
  "arguments-out-of-order",
  "arguments-renamed",
  "attribute-defined-outside-init",
  "broad-exception-raised",
  "comparison-with-callable",
  "dangerous-default-value",
  "deprecated-module",
  "eval-used",
  "expression-not-assigned",
  "fixme",
  "global-statement",
  "invalid-overridden-method",
  "keyword-arg-before-vararg",
  "possibly-unused-variable",
  "protected-access",
  "raise-missing-from",
  "redefined-builtin",
  "redefined-outer-name",
  "self-cls-assignment",
  "signature-differs",
  "super-init-not-called",
  "try-except-raise",
  "unnecessary-lambda",
  "unused-argument",
  "unused-variable",
  "using-constant-test",
]

[tool.mypy]
# Import discovery
files = ["vexor"]
namespace_packages = false
explicit_package_bases = false
ignore_missing_imports = true
follow_imports = "normal"
follow_imports_for_stubs = false
no_site_packages = false
no_silence_site_packages = false
# Platform configuration
python_version = "3.11"
platform = "linux-64"
# Disallow dynamic typing
disallow_any_unimported = false # TODO
disallow_any_expr = false # TODO
disallow_any_decorated = false # TODO
disallow_any_explicit = false # TODO
disallow_any_generics = false # TODO
disallow_subclassing_any = false # TODO
# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# None and Optional handling
no_implicit_optional = true
strict_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
# warn_no_return = true
warn_return_any = false # TODO
warn_unreachable = false # GH#27396
# Suppressing errors
ignore_errors = false
enable_error_code = "ignore-without-code"
# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = true
# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true

# To be kept consistent with "Import Formatting" section in contributing.rst
[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY" ,"PRE_LIBS" , "PRE_CORE", "DTYPES", "FIRSTPARTY", "POST_CORE", "LOCALFOLDER"]
profile = "black"
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true
skip_glob = "env"

[tool.ruff.format]
docstring-code-format = true
